# ExternalMergeSort

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: external_merge_sort.h  thread_pool.h
src/: external_merge_sort.cpp  generate_data.cpp  thread_pool.cpp
test/: merge_sort_test.cpp
